# team_agent47_assignment2_part1

./: .gitignore  CONTRIBUTING.md  LICENSE  PYPI_README.md  README.md  README_GITHUB.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md
NumCompute/: __init__.py  io.py  metrics.py  optim.py  pipeline.py  preprocessing.py  pyproject.toml  rank.py  setup.py  sort_search.py  stats.py  utils.py
NumCompute/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
NumCompute/benchmark/: benchmarking.py
NumCompute/numcompute/: rank.py  sort_search.py  stats.py
NumCompute/numcompute.egg-info/: PKG-INFO  SOURCES.txt
NumCompute/tests/: test_numcompute.py
NumCompute/tests/demo/: quickstart.ipynb
demo/: quickstart.ipynb
numcompute.egg-info/: PKG-INFO  SOURCES.txt
