[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numcompute"
version = "0.1.0"
description = "A lightweight NumPy-inspired numerical computing library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

authors = [
    { name = "Sabyasachi Kumar" }
]

[tool.setuptools.packages.find]
include = ["numcompute*"]
exclude = ["demo*"]