[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numcompute"
version = "0.1.0"
description = "A lightweight NumPy-inspired numerical computing library"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

authors = [
    { name = "Sabyasachi Kumar" }
]

license = { file = "LICENSE" }

keywords = ["machine learning", "numpy", "data science", "numerical computing"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/2100031988/NumCompute"
Issues = "https://github.com/2100031988/NumCompute/issues"

[tool.setuptools.packages.find]
include = ["numcompute*"]
exclude = ["demo*", "tests*"]