[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "numcompute"
version = "0.1.0"
description = "A lightweight NumPy-based ML framework"
authors = [
    { name = "Sabyasachi Kumar" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["numcompute*"]

